objects/Apttus__TemplateDynamicSectionVersion__c.object
<CustomObject>
    <description>Holds the template dynamic section details for a given template version</description>
    <fields>
        <fullName>Apttus__FilterCriteria__c</fullName>
        <description>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</description>
        <inlineHelpText>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</inlineHelpText>
        <label>Filter Criteria</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RulesetName__c</fullName>
        <description>Ruleset name used in template dynamic section</description>
        <inlineHelpText>Ruleset name used in template dynamic section</inlineHelpText>
        <label>Ruleset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateVersionId__c</fullName>
        <description>Master-detail to the template version</description>
        <inlineHelpText>Master-detail to the template version</inlineHelpText>
        <label>Template Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Template Dynamic Section Versions</relationshipLabel>
        <relationshipName>DynamicSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Dynamic Section Version</label>
    <nameField>
        <label>Template Dynamic Section Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Dynamic Section Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>